[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/Level2/TileMap1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ted/Ted.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Bone/Bone.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/Interface.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level2/Level2.gd" type="Script" id=6]
[ext_resource path="res://Audio/YouWinSound.tscn" type="PackedScene" id=7]
[ext_resource path="res://Audio/YouLoseSound.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/Level2/PitSensor.tscn" type="PackedScene" id=10]
[ext_resource path="res://Audio/boneget.wav" type="AudioStream" id=11]
[ext_resource path="res://Levels/Kitchen/KitchenPlatform.tscn" type="PackedScene" id=12]
[ext_resource path="res://Audio/whltnup.wav" type="AudioStream" id=26]
[ext_resource path="res://Audio/tedLevelSong.wav" type="AudioStream" id=27]

[node name="Level2" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.411765, 0.560784, 0.788235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap1" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -720781, 6, 0, -720780, 0, 0, -720779, 0, 0, -720778, 0, 0, -720777, 0, 0, -720776, 0, 0, -720775, 0, 0, -720774, 4, 0, -655245, 7, 0, -655244, 3, 0, -655243, 3, 0, -655242, 3, 0, -655241, 3, 0, -655240, 3, 0, -655239, 3, 0, -655238, 5, 0, -589709, 7, 0, -589708, 3, 0, -589707, 3, 0, -589706, 3, 0, -589705, 3, 0, -589704, 3, 0, -589703, 3, 0, -589702, 5, 0, -524173, 7, 0, -524172, 3, 0, -524171, 3, 0, -524170, 3, 0, -524169, 3, 0, -524168, 3, 0, -524167, 3, 0, -524166, 5, 0, -458637, 7, 0, -458636, 3, 0, -458635, 3, 0, -458634, 3, 0, -458633, 3, 0, -458632, 3, 0, -458631, 3, 0, -458630, 5, 0, -393101, 7, 0, -393100, 3, 0, -393099, 3, 0, -393098, 3, 0, -393097, 3, 0, -393096, 3, 0, -393095, 3, 0, -393094, 5, 0, -327565, 7, 0, -327564, 3, 0, -327563, 3, 0, -327562, 3, 0, -327561, 3, 0, -327560, 3, 0, -327559, 3, 0, -327558, 5, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 4, 0, -262043, 6, 0, -262042, 0, 0, -262041, 4, 0, -262039, 6, 0, -262038, 0, 0, -262037, 4, 0, -262029, 7, 0, -262028, 3, 0, -262027, 3, 0, -262026, 3, 0, -262025, 3, 0, -262024, 3, 0, -262023, 3, 0, -262022, 5, 0, -131078, 3, 0, -131077, 3, 0, -131076, 3, 0, -131075, 3, 0, -131074, 3, 0, -131073, 3, 0, -196608, 5, 0, -196508, 6, 0, -196507, 0, 0, -196506, 1, 0, -196505, 5, 0, -196503, 7, 0, -196502, 2, 0, -196501, 0, 0, -196500, 4, 0, -196493, 7, 0, -196492, 3, 0, -196491, 3, 0, -196490, 3, 0, -196489, 3, 0, -196488, 3, 0, -196487, 3, 0, -196486, 5, 0, -65542, 3, 0, -65541, 3, 0, -65540, 3, 0, -65539, 3, 0, -65538, 3, 0, -65537, 3, 0, -131072, 5, 0, -130973, 6, 0, -130972, 0, 0, -130971, 1, 0, -130970, 3, 0, -130969, 5, 0, -130967, 7, 0, -130966, 3, 0, -130965, 2, 0, -130964, 0, 0, -130963, 4, 0, -130957, 7, 0, -130956, 3, 0, -130955, 3, 0, -130954, 3, 0, -130953, 3, 0, -130952, 3, 0, -130951, 3, 0, -130950, 5, 0, -6, 3, 0, -5, 3, 0, -4, 3, 0, -3, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 5, 0, -65438, 6, 0, -65437, 0, 0, -65436, 1, 0, -65435, 3, 0, -65434, 3, 0, -65433, 5, 0, -65431, 7, 0, -65430, 3, 0, -65429, 3, 0, -65428, 2, 0, -65427, 0, 0, -65426, 4, 0, -65421, 7, 0, -65420, 3, 0, -65419, 3, 0, -65418, 3, 0, -65417, 3, 0, -65416, 3, 0, -65415, 3, 0, -65414, 5, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 5, 0, 89, 6, 0, 90, 0, 0, 91, 0, 0, 92, 0, 0, 93, 0, 0, 94, 0, 0, 95, 0, 0, 96, 0, 0, 97, 0, 0, 98, 0, 0, 99, 1, 0, 100, 3, 0, 101, 3, 0, 102, 3, 0, 103, 5, 0, 105, 7, 0, 106, 3, 0, 107, 3, 0, 108, 3, 0, 109, 2, 0, 110, 0, 0, 111, 0, 0, 112, 0, 0, 113, 0, 0, 114, 0, 0, 115, 0, 0, 116, 1, 0, 117, 3, 0, 118, 3, 0, 119, 3, 0, 120, 3, 0, 121, 3, 0, 122, 5, 0, 131066, 3, 0, 131067, 3, 0, 131068, 3, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 5, 0, 65625, 7, 0, 65626, 3, 0, 65627, 3, 0, 65628, 3, 0, 65629, 3, 0, 65630, 3, 0, 65631, 3, 0, 65632, 3, 0, 65633, 3, 0, 65634, 3, 0, 65635, 3, 0, 65636, 3, 0, 65637, 3, 0, 65638, 3, 0, 65639, 5, 0, 65641, 7, 0, 65642, 3, 0, 65643, 3, 0, 65644, 3, 0, 65645, 3, 0, 65646, 3, 0, 65647, 3, 0, 65648, 3, 0, 65649, 3, 0, 65650, 3, 0, 65651, 3, 0, 65652, 3, 0, 65653, 3, 0, 65654, 3, 0, 65655, 3, 0, 65656, 3, 0, 65657, 3, 0, 65658, 5, 0, 196602, 3, 0, 196603, 3, 0, 196604, 3, 0, 196605, 3, 0, 196606, 3, 0, 196607, 3, 0, 131072, 5, 0, 131161, 7, 0, 131162, 3, 0, 131163, 3, 0, 131164, 3, 0, 131165, 3, 0, 131166, 3, 0, 131167, 3, 0, 131168, 3, 0, 131169, 3, 0, 131170, 3, 0, 131171, 3, 0, 131172, 3, 0, 131173, 3, 0, 131174, 3, 0, 131175, 5, 0, 131177, 7, 0, 131178, 3, 0, 131179, 3, 0, 131180, 3, 0, 131181, 3, 0, 131182, 3, 0, 131183, 3, 0, 131184, 3, 0, 131185, 3, 0, 131186, 3, 0, 131187, 3, 0, 131188, 3, 0, 131189, 3, 0, 131190, 3, 0, 131191, 3, 0, 131192, 3, 0, 131193, 3, 0, 131194, 5, 0, 262138, 3, 0, 262139, 3, 0, 262140, 3, 0, 262141, 3, 0, 262142, 3, 0, 262143, 3, 0, 196608, 5, 0, 196667, 6, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 4, 0, 196679, 6, 0, 196680, 0, 0, 196681, 0, 0, 196682, 0, 0, 196683, 4, 0, 196697, 7, 0, 196698, 3, 0, 196699, 3, 0, 196700, 3, 0, 196701, 3, 0, 196702, 3, 0, 196703, 3, 0, 196704, 3, 0, 196705, 3, 0, 196706, 3, 0, 196707, 3, 0, 196708, 3, 0, 196709, 3, 0, 196710, 3, 0, 196711, 5, 0, 196713, 7, 0, 196714, 3, 0, 196715, 3, 0, 196716, 3, 0, 196717, 3, 0, 196718, 3, 0, 196719, 3, 0, 196720, 3, 0, 196721, 3, 0, 196722, 3, 0, 196723, 3, 0, 196724, 3, 0, 196725, 3, 0, 196726, 3, 0, 196727, 3, 0, 196728, 3, 0, 196729, 3, 0, 196730, 5, 0, 327674, 3, 0, 327675, 3, 0, 327676, 3, 0, 327677, 3, 0, 327678, 3, 0, 327679, 3, 0, 262144, 5, 0, 262233, 7, 0, 262234, 3, 0, 262235, 3, 0, 262236, 3, 0, 262237, 3, 0, 262238, 3, 0, 262239, 3, 0, 262240, 3, 0, 262241, 3, 0, 262242, 3, 0, 262243, 3, 0, 262244, 3, 0, 262245, 3, 0, 262246, 3, 0, 262247, 5, 0, 262249, 7, 0, 262250, 3, 0, 262251, 3, 0, 262252, 3, 0, 262253, 3, 0, 262254, 3, 0, 262255, 3, 0, 262256, 3, 0, 262257, 3, 0, 262258, 3, 0, 262259, 3, 0, 262260, 3, 0, 262261, 3, 0, 262262, 3, 0, 262263, 3, 0, 262264, 3, 0, 262265, 3, 0, 262266, 5, 0, 393210, 3, 0, 393211, 3, 0, 393212, 3, 0, 393213, 3, 0, 393214, 3, 0, 393215, 3, 0, 327680, 5, 0, 327726, 6, 0, 327727, 0, 0, 327728, 0, 0, 327729, 4, 0, 327769, 7, 0, 327770, 3, 0, 327771, 3, 0, 327772, 3, 0, 327773, 3, 0, 327774, 3, 0, 327775, 3, 0, 327776, 3, 0, 327777, 3, 0, 327778, 3, 0, 327779, 3, 0, 327780, 3, 0, 327781, 3, 0, 327782, 3, 0, 327783, 5, 0, 327785, 7, 0, 327786, 3, 0, 327787, 3, 0, 327788, 3, 0, 327789, 3, 0, 327790, 3, 0, 327791, 3, 0, 327792, 3, 0, 327793, 3, 0, 327794, 3, 0, 327795, 3, 0, 327796, 3, 0, 327797, 3, 0, 327798, 3, 0, 327799, 3, 0, 327800, 3, 0, 327801, 3, 0, 327802, 5, 0, 458746, 3, 0, 458747, 3, 0, 458748, 3, 0, 458749, 3, 0, 458750, 3, 0, 458751, 3, 0, 393216, 5, 0, 393236, 6, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 4, 0, 393251, 6, 0, 393252, 0, 0, 393253, 0, 0, 393254, 4, 0, 393258, 6, 0, 393259, 0, 0, 393260, 0, 0, 393261, 4, 0, 393262, 7, 0, 393263, 3, 0, 393264, 3, 0, 393265, 5, 0, 393299, 6, 0, 393300, 0, 0, 393301, 0, 0, 393302, 0, 0, 393303, 4, 0, 393305, 7, 0, 393306, 3, 0, 393307, 3, 0, 393308, 3, 0, 393309, 3, 0, 393310, 3, 0, 393311, 3, 0, 393312, 3, 0, 393313, 3, 0, 393314, 3, 0, 393315, 3, 0, 393316, 3, 0, 393317, 3, 0, 393318, 3, 0, 393319, 5, 0, 393321, 7, 0, 393322, 3, 0, 393323, 3, 0, 393324, 3, 0, 393325, 3, 0, 393326, 3, 0, 393327, 3, 0, 393328, 3, 0, 393329, 3, 0, 393330, 3, 0, 393331, 3, 0, 393332, 3, 0, 393333, 3, 0, 393334, 3, 0, 393335, 3, 0, 393336, 3, 0, 393337, 3, 0, 393338, 5, 0, 524282, 3, 0, 524283, 3, 0, 524284, 3, 0, 524285, 3, 0, 524286, 3, 0, 524287, 3, 0, 458752, 5, 0, 458780, 6, 0, 458781, 0, 0, 458782, 0, 0, 458783, 4, 0, 458787, 7, 0, 458788, 3, 0, 458789, 3, 0, 458790, 5, 0, 458794, 7, 0, 458795, 3, 0, 458796, 3, 0, 458797, 5, 0, 458798, 7, 0, 458799, 3, 0, 458800, 3, 0, 458801, 5, 0, 458825, 6, 0, 458826, 0, 0, 458827, 4, 0, 458838, 3, 0, 458839, 5, 0, 458841, 7, 0, 458842, 3, 0, 458843, 3, 0, 458844, 3, 0, 458845, 3, 0, 458846, 3, 0, 458847, 3, 0, 458848, 3, 0, 458849, 3, 0, 458850, 3, 0, 458851, 3, 0, 458852, 3, 0, 458853, 3, 0, 458854, 3, 0, 458855, 5, 0, 458857, 7, 0, 458858, 3, 0, 458859, 3, 0, 458860, 3, 0, 458861, 3, 0, 458862, 3, 0, 458863, 3, 0, 458864, 3, 0, 458865, 3, 0, 458866, 3, 0, 458867, 3, 0, 458868, 3, 0, 458869, 3, 0, 458870, 3, 0, 458871, 3, 0, 458872, 3, 0, 458873, 3, 0, 458874, 5, 0, 589818, 3, 0, 589819, 3, 0, 589820, 3, 0, 589821, 3, 0, 589822, 3, 0, 589823, 2, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 1, 0, 524318, 2, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 1, 0, 524325, 2, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524330, 0, 0, 524331, 1, 0, 524332, 2, 0, 524333, 0, 0, 524334, 0, 0, 524335, 1, 0, 524336, 3, 0, 524337, 5, 0, 524360, 6, 0, 524361, 0, 0, 524362, 0, 0, 524363, 4, 0, 524369, 6, 0, 524370, 0, 0, 524371, 0, 0, 524372, 0, 0, 524373, 0, 0, 524374, 1, 0, 524375, 5, 0, 524377, 7, 0, 524378, 3, 0, 524379, 3, 0, 524380, 3, 0, 524381, 3, 0, 524382, 3, 0, 524383, 3, 0, 524384, 3, 0, 524385, 3, 0, 524386, 3, 0, 524387, 3, 0, 524388, 3, 0, 524389, 3, 0, 524390, 3, 0, 524391, 5, 0, 524393, 7, 0, 524394, 3, 0, 524395, 3, 0, 524396, 3, 0, 524397, 3, 0, 524398, 3, 0, 524399, 3, 0, 524400, 3, 0, 524401, 3, 0, 524402, 3, 0, 524403, 3, 0, 524404, 3, 0, 524405, 3, 0, 524406, 3, 0, 524407, 3, 0, 524408, 3, 0, 524409, 3, 0, 524410, 5, 0, 655354, 3, 0, 655355, 3, 0, 655356, 3, 0, 655357, 3, 0, 655358, 3, 0, 655359, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 589845, 3, 0, 589846, 3, 0, 589847, 3, 0, 589848, 3, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 3, 0, 589853, 3, 0, 589854, 3, 0, 589855, 3, 0, 589856, 3, 0, 589857, 3, 0, 589858, 3, 0, 589859, 3, 0, 589860, 3, 0, 589861, 3, 0, 589862, 3, 0, 589863, 3, 0, 589864, 3, 0, 589865, 3, 0, 589866, 3, 0, 589867, 3, 0, 589868, 3, 0, 589869, 3, 0, 589870, 3, 0, 589871, 3, 0, 589872, 3, 0, 589873, 5, 0, 589913, 7, 0, 589914, 3, 0, 589915, 3, 0, 589916, 3, 0, 589917, 3, 0, 589918, 3, 0, 589919, 3, 0, 589920, 3, 0, 589921, 3, 0, 589922, 3, 0, 589923, 3, 0, 589924, 3, 0, 589925, 3, 0, 589926, 3, 0, 589927, 5, 0, 589929, 7, 0, 589930, 3, 0, 589931, 3, 0, 589932, 3, 0, 589933, 3, 0, 589934, 3, 0, 589935, 3, 0, 589936, 3, 0, 589937, 3, 0, 589938, 3, 0, 589939, 3, 0, 589940, 3, 0, 589941, 3, 0, 589942, 3, 0, 589943, 3, 0, 589944, 3, 0, 589945, 3, 0, 589946, 5, 0, 720890, 3, 0, 720891, 3, 0, 720892, 3, 0, 720893, 3, 0, 720894, 3, 0, 720895, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 3, 0, 655384, 3, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 655390, 3, 0, 655391, 3, 0, 655392, 3, 0, 655393, 3, 0, 655394, 3, 0, 655395, 3, 0, 655396, 3, 0, 655397, 3, 0, 655398, 3, 0, 655399, 3, 0, 655400, 3, 0, 655401, 3, 0, 655402, 3, 0, 655403, 3, 0, 655404, 3, 0, 655405, 3, 0, 655406, 3, 0, 655407, 3, 0, 655408, 2, 0, 655409, 0, 0, 655410, 0, 0, 655411, 0, 0, 655412, 4, 0, 655413, 6, 0, 655414, 0, 0, 655415, 0, 0, 655416, 0, 0, 655417, 0, 0, 655418, 0, 0, 655419, 0, 0, 655420, 0, 0, 655421, 0, 0, 655422, 0, 0, 655423, 0, 0, 655424, 0, 0, 655425, 0, 0, 655426, 4, 0, 655428, 6, 0, 655429, 0, 0, 655430, 0, 0, 655431, 0, 0, 655432, 0, 0, 655433, 0, 0, 655434, 0, 0, 655435, 0, 0, 655436, 0, 0, 655437, 0, 0, 655438, 0, 0, 655439, 0, 0, 655440, 0, 0, 655441, 0, 0, 655442, 0, 0, 655443, 0, 0, 655444, 0, 0, 655445, 0, 0, 655446, 0, 0, 655447, 0, 0, 655448, 0, 0, 655449, 0, 0, 655450, 1, 0, 655451, 3, 0, 655452, 3, 0, 655453, 3, 0, 655454, 3, 0, 655455, 3, 0, 655456, 3, 0, 655457, 3, 0, 655458, 3, 0, 655459, 3, 0, 655460, 3, 0, 655461, 3, 0, 655462, 3, 0, 655463, 5, 0, 655465, 7, 0, 655466, 3, 0, 655467, 3, 0, 655468, 3, 0, 655469, 3, 0, 655470, 3, 0, 655471, 3, 0, 655472, 3, 0, 655473, 3, 0, 655474, 3, 0, 655475, 3, 0, 655476, 3, 0, 655477, 3, 0, 655478, 3, 0, 655479, 3, 0, 655480, 3, 0, 655481, 3, 0, 655482, 5, 0, 786426, 3, 0, 786427, 3, 0, 786428, 3, 0, 786429, 3, 0, 786430, 3, 0, 786431, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 3, 0, 720925, 3, 0, 720926, 3, 0, 720927, 3, 0, 720928, 3, 0, 720929, 3, 0, 720930, 3, 0, 720931, 3, 0, 720932, 3, 0, 720933, 3, 0, 720934, 3, 0, 720935, 3, 0, 720936, 3, 0, 720937, 3, 0, 720938, 3, 0, 720939, 3, 0, 720940, 3, 0, 720941, 3, 0, 720942, 3, 0, 720943, 3, 0, 720944, 3, 0, 720945, 3, 0, 720946, 3, 0, 720947, 3, 0, 720948, 5, 0, 720949, 7, 0, 720950, 3, 0, 720951, 3, 0, 720952, 3, 0, 720953, 3, 0, 720954, 3, 0, 720955, 3, 0, 720956, 3, 0, 720957, 3, 0, 720958, 3, 0, 720959, 3, 0, 720960, 3, 0, 720961, 3, 0, 720962, 5, 0, 720964, 7, 0, 720965, 3, 0, 720966, 3, 0, 720967, 3, 0, 720968, 3, 0, 720969, 3, 0, 720970, 3, 0, 720971, 3, 0, 720972, 3, 0, 720973, 3, 0, 720974, 3, 0, 720975, 3, 0, 720976, 3, 0, 720977, 3, 0, 720978, 3, 0, 720979, 3, 0, 720980, 3, 0, 720981, 3, 0, 720982, 3, 0, 720983, 3, 0, 720984, 3, 0, 720985, 3, 0, 720986, 3, 0, 720987, 3, 0, 720988, 3, 0, 720989, 3, 0, 720990, 3, 0, 720991, 3, 0, 720992, 3, 0, 720993, 3, 0, 720994, 3, 0, 720995, 3, 0, 720996, 3, 0, 720997, 3, 0, 720998, 3, 0, 720999, 5, 0, 721001, 7, 0, 721002, 3, 0, 721003, 3, 0, 721004, 3, 0, 721005, 3, 0, 721006, 3, 0, 721007, 3, 0, 721008, 3, 0, 721009, 3, 0, 721010, 3, 0, 721011, 3, 0, 721012, 3, 0, 721013, 3, 0, 721014, 3, 0, 721015, 3, 0, 721016, 3, 0, 721017, 3, 0, 721018, 5, 0, 851962, 3, 0, 851963, 3, 0, 851964, 3, 0, 851965, 3, 0, 851966, 3, 0, 851967, 3, 0, 786432, 3, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 3, 0, 786462, 3, 0, 786463, 3, 0, 786464, 3, 0, 786465, 3, 0, 786466, 3, 0, 786467, 3, 0, 786468, 3, 0, 786469, 3, 0, 786470, 3, 0, 786471, 3, 0, 786472, 3, 0, 786473, 3, 0, 786474, 3, 0, 786475, 3, 0, 786476, 3, 0, 786477, 3, 0, 786478, 3, 0, 786479, 3, 0, 786480, 3, 0, 786481, 3, 0, 786482, 3, 0, 786483, 3, 0, 786484, 5, 0, 786485, 7, 0, 786486, 3, 0, 786487, 3, 0, 786488, 3, 0, 786489, 3, 0, 786490, 3, 0, 786491, 3, 0, 786492, 3, 0, 786493, 3, 0, 786494, 3, 0, 786495, 3, 0, 786496, 3, 0, 786497, 3, 0, 786498, 5, 0, 786500, 7, 0, 786501, 3, 0, 786502, 3, 0, 786503, 3, 0, 786504, 3, 0, 786505, 3, 0, 786506, 3, 0, 786507, 3, 0, 786508, 3, 0, 786509, 3, 0, 786510, 3, 0, 786511, 3, 0, 786512, 3, 0, 786513, 3, 0, 786514, 3, 0, 786515, 3, 0, 786516, 3, 0, 786517, 3, 0, 786518, 3, 0, 786519, 3, 0, 786520, 3, 0, 786521, 3, 0, 786522, 3, 0, 786523, 3, 0, 786524, 3, 0, 786525, 3, 0, 786526, 3, 0, 786527, 3, 0, 786528, 3, 0, 786529, 3, 0, 786530, 3, 0, 786531, 3, 0, 786532, 3, 0, 786533, 3, 0, 786534, 3, 0, 786535, 5, 0, 786537, 7, 0, 786538, 3, 0, 786539, 3, 0, 786540, 3, 0, 786541, 3, 0, 786542, 3, 0, 786543, 3, 0, 786544, 3, 0, 786545, 3, 0, 786546, 3, 0, 786547, 3, 0, 786548, 3, 0, 786549, 3, 0, 786550, 3, 0, 786551, 3, 0, 786552, 3, 0, 786553, 3, 0, 786554, 5, 0 )

[node name="Ted" parent="." instance=ExtResource( 2 )]
position = Vector2( 161.652, 76.8509 )
scale = Vector2( 0.75, 0.75 )

[node name="Camera2D" type="Camera2D" parent="Ted"]
current = true
limit_left = -32
limit_right = 7600
limit_bottom = 768
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.39

[node name="Bone" parent="." instance=ExtResource( 3 )]
position = Vector2( 1054.83, 424.673 )

[node name="Bone2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1504, 288 )

[node name="Bone3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1504, 480 )

[node name="Bone4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1920, 408 )

[node name="Bone5" parent="." instance=ExtResource( 3 )]
position = Vector2( 2592, 472 )

[node name="Bone6" parent="." instance=ExtResource( 3 )]
position = Vector2( 2944, 256 )

[node name="Bone7" parent="." instance=ExtResource( 3 )]
position = Vector2( 3264, 256 )

[node name="Bone8" parent="." instance=ExtResource( 3 )]
position = Vector2( 4160, 576 )

[node name="Bone9" parent="." instance=ExtResource( 3 )]
position = Vector2( 3936, 160 )

[node name="Bone18" parent="." instance=ExtResource( 3 )]
position = Vector2( 4192, 160 )

[node name="Bone19" parent="." instance=ExtResource( 3 )]
position = Vector2( 4064, 160 )

[node name="Bone20" parent="." instance=ExtResource( 3 )]
position = Vector2( 5784, -32 )

[node name="Bone21" parent="." instance=ExtResource( 3 )]
position = Vector2( 4776, 152 )

[node name="Bone22" parent="." instance=ExtResource( 3 )]
position = Vector2( 4496, 552 )

[node name="Bone23" parent="." instance=ExtResource( 3 )]
position = Vector2( 4768, 416 )

[node name="Bone24" parent="." instance=ExtResource( 3 )]
position = Vector2( 5664, 288 )

[node name="Bone25" parent="." instance=ExtResource( 3 )]
position = Vector2( 5472, 480 )

[node name="Bone26" parent="." instance=ExtResource( 3 )]
position = Vector2( 5280, 480 )

[node name="Bone27" parent="." instance=ExtResource( 3 )]
position = Vector2( 7384, -40 )

[node name="Bone28" parent="." instance=ExtResource( 3 )]
position = Vector2( 6688, -320 )

[node name="KitchenPlatform" parent="." instance=ExtResource( 12 )]
position = Vector2( 3264, 544 )

[node name="KitchenPlatform2" parent="." instance=ExtResource( 12 )]
position = Vector2( 3712, 288 )
move_to = Vector2( 0, 256 )
speed = 3.0

[node name="KitchenPlatform3" parent="." instance=ExtResource( 12 )]
position = Vector2( 5664, 312 )

[node name="YouLoseSound" parent="." instance=ExtResource( 9 )]

[node name="YouWinSound" parent="." instance=ExtResource( 7 )]

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 27 )

[node name="UnpauseGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[node name="BoneCollected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="PitSensor" parent="." instance=ExtResource( 10 )]
position = Vector2( 3392, 840 )
scale = Vector2( 6.29979, 0.898181 )

[node name="PitSensor2" parent="." instance=ExtResource( 10 )]
position = Vector2( 4320, 840 )
scale = Vector2( 6.29979, 0.898181 )

[node name="PitSensor3" parent="." instance=ExtResource( 10 )]
position = Vector2( 6688, 0 )
scale = Vector2( 5.78221, 1.04263 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" parent="CanvasLayer" instance=ExtResource( 5 )]
[connection signal="pause_game" from="Ted" to="CanvasLayer/Interface" method="_on_Ted_pause_game"]
[connection signal="pause_game" from="Ted" to="." method="_on_Ted_pause_game"]
[connection signal="bone_collected" from="Bone" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone2" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone3" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone4" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone5" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone6" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone7" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone8" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone9" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone18" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone19" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone20" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone21" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone22" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone23" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone24" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone25" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone26" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone27" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone28" to="." method="_on_Bone_bone_collected"]
[connection signal="pit_entered" from="PitSensor" to="." method="_on_PitSensor_pit_entered"]
[connection signal="pit_entered" from="PitSensor2" to="." method="_on_PitSensor_pit_entered"]
[connection signal="pit_entered" from="PitSensor3" to="." method="_on_PitSensor_pit_entered"]
[connection signal="time_out_external" from="CanvasLayer/Interface" to="." method="_on_Interface_time_out_external"]
[connection signal="unpause_external" from="CanvasLayer/Interface" to="." method="_on_Interface_unpause_external"]
